# serializer version: 1
# name: test_attachment_file_response_schema
  '''
  {
    "info": {
      "title": "Your Awesome Project",
      "version": "0.1.0"
    },
    "openapi": "3.1.0",
    "paths": {
      "/file-attachment-response/": {
        "get": {
          "operationId": "getAttachmentfileresponsecontrollerFileAttachmentResponse",
          "responses": {
            "200": {
              "description": "OK",
              "headers": {
                "Content-Length": {
                  "schema": {
                    "type": "string"
                  },
                  "required": true
                },
                "Content-Disposition": {
                  "schema": {
                    "type": "string"
                  },
                  "required": true
                }
              },
              "content": {
                "image/png": {
                  "schema": {
                    "type": "string",
                    "format": "binary"
                  }
                }
              }
            },
            "422": {
              "description": "Raised when returned response does not match the response schema",
              "content": {
                "image/png": {
                  "schema": {
                    "$ref": "#/components/schemas/ErrorModel"
                  }
                }
              }
            },
            "406": {
              "description": "Raised when provided `Accept` header cannot be satisfied",
              "content": {
                "image/png": {
                  "schema": {
                    "$ref": "#/components/schemas/ErrorModel"
                  }
                }
              }
            }
          },
          "deprecated": false
        }
      }
    },
    "components": {
      "schemas": {
        "ErrorDetail": {
          "properties": {
            "msg": {
              "type": "string",
              "title": "Msg"
            },
            "type": {
              "type": "string",
              "title": "Type"
            },
            "loc": {
              "items": {
                "anyOf": [
                  {
                    "type": "integer"
                  },
                  {
                    "type": "string"
                  }
                ]
              },
              "type": "array",
              "title": "Loc"
            }
          },
          "type": "object",
          "required": [
            "msg"
          ],
          "title": "ErrorDetail",
          "description": "Base schema for error details description."
        },
        "ErrorModel": {
          "properties": {
            "detail": {
              "items": {
                "$ref": "#/components/schemas/ErrorDetail"
              },
              "type": "array",
              "title": "Detail"
            }
          },
          "type": "object",
          "required": [
            "detail"
          ],
          "title": "ErrorModel",
          "description": "Default error response schema.\n\nCan be customized.\nSee :ref:`customizing-error-messages` for more details."
        }
      },
      "securitySchemes": {}
    }
  }
  '''
# ---
# name: test_body_and_file_schema
  '''
  {
    "info": {
      "title": "Your Awesome Project",
      "version": "0.1.0"
    },
    "openapi": "3.1.0",
    "paths": {
      "/file/": {
        "post": {
          "operationId": "postBodyandfilecontrollerFile",
          "requestBody": {
            "content": {
              "multipart/form-data": {
                "schema": {
                  "allOf": [
                    {
                      "properties": {
                        "attachments": {
                          "items": {
                            "type": "string",
                            "format": "binary"
                          },
                          "type": "array"
                        },
                        "second_file": {
                          "type": "string",
                          "format": "binary"
                        }
                      },
                      "type": "object",
                      "required": [
                        "attachments",
                        "second_file"
                      ],
                      "title": "_SeveralFiles",
                      "description": "Model docs."
                    },
                    {
                      "$ref": "#/components/schemas/_DescriptionModel"
                    }
                  ]
                },
                "encoding": {
                  "second_file": {
                    "contentType": "application/json, text/plain"
                  }
                }
              }
            },
            "description": "Description from doc. Model docs.",
            "required": true
          },
          "responses": {
            "201": {
              "description": "Created",
              "content": {
                "application/json": {
                  "schema": {
                    "items": {
                      "type": "integer"
                    },
                    "type": "array"
                  }
                }
              }
            },
            "400": {
              "description": "Raised when request components cannot be parsed",
              "content": {
                "application/json": {
                  "schema": {
                    "$ref": "#/components/schemas/ErrorModel"
                  }
                }
              }
            },
            "422": {
              "description": "Raised when returned response does not match the response schema",
              "content": {
                "application/json": {
                  "schema": {
                    "$ref": "#/components/schemas/ErrorModel"
                  }
                }
              }
            },
            "406": {
              "description": "Raised when provided `Accept` header cannot be satisfied",
              "content": {
                "application/json": {
                  "schema": {
                    "$ref": "#/components/schemas/ErrorModel"
                  }
                }
              }
            }
          },
          "deprecated": false
        }
      }
    },
    "components": {
      "schemas": {
        "ErrorDetail": {
          "properties": {
            "msg": {
              "type": "string",
              "title": "Msg"
            },
            "type": {
              "type": "string",
              "title": "Type"
            },
            "loc": {
              "items": {
                "anyOf": [
                  {
                    "type": "integer"
                  },
                  {
                    "type": "string"
                  }
                ]
              },
              "type": "array",
              "title": "Loc"
            }
          },
          "type": "object",
          "required": [
            "msg"
          ],
          "title": "ErrorDetail",
          "description": "Base schema for error details description."
        },
        "ErrorModel": {
          "properties": {
            "detail": {
              "items": {
                "$ref": "#/components/schemas/ErrorDetail"
              },
              "type": "array",
              "title": "Detail"
            }
          },
          "type": "object",
          "required": [
            "detail"
          ],
          "title": "ErrorModel",
          "description": "Default error response schema.\n\nCan be customized.\nSee :ref:`customizing-error-messages` for more details."
        },
        "_DescriptionModel": {
          "properties": {
            "first": {
              "type": "string",
              "title": "First"
            },
            "second": {
              "items": {
                "type": "integer"
              },
              "type": "array",
              "title": "Second"
            }
          },
          "type": "object",
          "required": [
            "first",
            "second"
          ],
          "title": "_DescriptionModel",
          "description": "Description from doc."
        }
      },
      "securitySchemes": {}
    }
  }
  '''
# ---
# name: test_conditional_files_schema
  '''
  {
    "info": {
      "title": "Your Awesome Project",
      "version": "0.1.0"
    },
    "openapi": "3.1.0",
    "paths": {
      "/conditional-files/": {
        "post": {
          "operationId": "postConditionalfilecontrollerConditionalFiles",
          "requestBody": {
            "content": {
              "multipart/form-data": {
                "schema": {
                  "anyOf": [
                    {
                      "$ref": "#/components/schemas/_SeveralFiles"
                    },
                    {
                      "$ref": "#/components/schemas/_OctetFileModel"
                    }
                  ],
                  "properties": {}
                }
              },
              "application/octet-stream": {
                "schema": {
                  "properties": {
                    "content_type": {
                      "type": "string",
                      "format": "binary"
                    },
                    "size": {
                      "type": "string",
                      "format": "binary"
                    },
                    "name": {
                      "type": "string",
                      "format": "binary"
                    }
                  },
                  "type": "object",
                  "required": [
                    "content_type",
                    "size",
                    "name"
                  ],
                  "title": "_OctetFileModel"
                }
              }
            },
            "required": true
          },
          "responses": {
            "201": {
              "description": "Created",
              "content": {
                "application/json": {
                  "schema": {
                    "anyOf": [
                      {
                        "$ref": "#/components/schemas/_SeveralFiles"
                      },
                      {
                        "$ref": "#/components/schemas/_OctetFileModel"
                      }
                    ]
                  }
                }
              }
            },
            "400": {
              "description": "Raised when request components cannot be parsed",
              "content": {
                "application/json": {
                  "schema": {
                    "$ref": "#/components/schemas/ErrorModel"
                  }
                }
              }
            },
            "422": {
              "description": "Raised when returned response does not match the response schema",
              "content": {
                "application/json": {
                  "schema": {
                    "$ref": "#/components/schemas/ErrorModel"
                  }
                }
              }
            },
            "406": {
              "description": "Raised when provided `Accept` header cannot be satisfied",
              "content": {
                "application/json": {
                  "schema": {
                    "$ref": "#/components/schemas/ErrorModel"
                  }
                }
              }
            }
          },
          "deprecated": false
        }
      }
    },
    "components": {
      "schemas": {
        "ErrorDetail": {
          "properties": {
            "msg": {
              "type": "string",
              "title": "Msg"
            },
            "type": {
              "type": "string",
              "title": "Type"
            },
            "loc": {
              "items": {
                "anyOf": [
                  {
                    "type": "integer"
                  },
                  {
                    "type": "string"
                  }
                ]
              },
              "type": "array",
              "title": "Loc"
            }
          },
          "type": "object",
          "required": [
            "msg"
          ],
          "title": "ErrorDetail",
          "description": "Base schema for error details description."
        },
        "ErrorModel": {
          "properties": {
            "detail": {
              "items": {
                "$ref": "#/components/schemas/ErrorDetail"
              },
              "type": "array",
              "title": "Detail"
            }
          },
          "type": "object",
          "required": [
            "detail"
          ],
          "title": "ErrorModel",
          "description": "Default error response schema.\n\nCan be customized.\nSee :ref:`customizing-error-messages` for more details."
        },
        "_FileModel": {
          "properties": {
            "content_type": {
              "type": "string",
              "enum": [
                "application/json",
                "text/plain"
              ],
              "title": "Content Type"
            },
            "size": {
              "type": "integer",
              "title": "Size"
            }
          },
          "type": "object",
          "required": [
            "content_type",
            "size"
          ],
          "title": "_FileModel"
        },
        "_OctetFileModel": {
          "properties": {
            "content_type": {
              "type": "string",
              "const": "application/octet-stream",
              "title": "Content Type"
            },
            "size": {
              "type": "integer",
              "title": "Size"
            },
            "name": {
              "type": "string",
              "title": "Name"
            }
          },
          "type": "object",
          "required": [
            "content_type",
            "size",
            "name"
          ],
          "title": "_OctetFileModel"
        },
        "_SeveralFiles": {
          "properties": {
            "first_file": {
              "$ref": "#/components/schemas/_FileModel"
            },
            "second_file": {
              "$ref": "#/components/schemas/_FileModel"
            }
          },
          "type": "object",
          "required": [
            "first_file",
            "second_file"
          ],
          "title": "_SeveralFiles"
        }
      },
      "securitySchemes": {}
    }
  }
  '''
# ---
# name: test_file_request_schema
  '''
  {
    "info": {
      "title": "Your Awesome Project",
      "version": "0.1.0"
    },
    "openapi": "3.1.0",
    "paths": {
      "/file/": {
        "get": {
          "operationId": "file_test_id",
          "requestBody": {
            "content": {
              "multipart/form-data": {
                "schema": {
                  "properties": {
                    "attachments": {
                      "items": {
                        "type": "string",
                        "format": "binary"
                      },
                      "type": "array"
                    },
                    "second_file": {
                      "type": "string",
                      "format": "binary"
                    }
                  },
                  "type": "object",
                  "required": [
                    "attachments",
                    "second_file"
                  ],
                  "title": "_SeveralFiles",
                  "description": "Model docs."
                },
                "encoding": {
                  "second_file": {
                    "contentType": "application/json, text/plain"
                  }
                }
              }
            },
            "description": "Model docs.",
            "required": true
          },
          "responses": {
            "200": {
              "description": "OK",
              "content": {
                "application/json": {
                  "schema": {
                    "items": {
                      "type": "integer"
                    },
                    "type": "array"
                  }
                }
              }
            },
            "400": {
              "description": "Raised when request components cannot be parsed",
              "content": {
                "application/json": {
                  "schema": {
                    "$ref": "#/components/schemas/ErrorModel"
                  }
                }
              }
            },
            "422": {
              "description": "Raised when returned response does not match the response schema",
              "content": {
                "application/json": {
                  "schema": {
                    "$ref": "#/components/schemas/ErrorModel"
                  }
                }
              }
            },
            "406": {
              "description": "Raised when provided `Accept` header cannot be satisfied",
              "content": {
                "application/json": {
                  "schema": {
                    "$ref": "#/components/schemas/ErrorModel"
                  }
                }
              }
            }
          },
          "deprecated": true
        }
      }
    },
    "components": {
      "schemas": {
        "ErrorDetail": {
          "properties": {
            "msg": {
              "type": "string",
              "title": "Msg"
            },
            "type": {
              "type": "string",
              "title": "Type"
            },
            "loc": {
              "items": {
                "anyOf": [
                  {
                    "type": "integer"
                  },
                  {
                    "type": "string"
                  }
                ]
              },
              "type": "array",
              "title": "Loc"
            }
          },
          "type": "object",
          "required": [
            "msg"
          ],
          "title": "ErrorDetail",
          "description": "Base schema for error details description."
        },
        "ErrorModel": {
          "properties": {
            "detail": {
              "items": {
                "$ref": "#/components/schemas/ErrorDetail"
              },
              "type": "array",
              "title": "Detail"
            }
          },
          "type": "object",
          "required": [
            "detail"
          ],
          "title": "ErrorModel",
          "description": "Default error response schema.\n\nCan be customized.\nSee :ref:`customizing-error-messages` for more details."
        }
      },
      "securitySchemes": {}
    }
  }
  '''
# ---
# name: test_file_response_schema
  '''
  {
    "info": {
      "title": "Your Awesome Project",
      "version": "0.1.0"
    },
    "openapi": "3.1.0",
    "paths": {
      "/file-response/": {
        "get": {
          "operationId": "getFileresponsecontrollerFileResponse",
          "responses": {
            "200": {
              "description": "OK",
              "headers": {
                "Content-Length": {
                  "schema": {
                    "type": "string"
                  },
                  "required": true
                }
              },
              "content": {
                "image/png": {
                  "schema": {
                    "type": "string",
                    "format": "binary"
                  }
                }
              }
            },
            "422": {
              "description": "Raised when returned response does not match the response schema",
              "content": {
                "image/png": {
                  "schema": {
                    "$ref": "#/components/schemas/ErrorModel"
                  }
                }
              }
            },
            "406": {
              "description": "Raised when provided `Accept` header cannot be satisfied",
              "content": {
                "image/png": {
                  "schema": {
                    "$ref": "#/components/schemas/ErrorModel"
                  }
                }
              }
            }
          },
          "deprecated": false
        }
      }
    },
    "components": {
      "schemas": {
        "ErrorDetail": {
          "properties": {
            "msg": {
              "type": "string",
              "title": "Msg"
            },
            "type": {
              "type": "string",
              "title": "Type"
            },
            "loc": {
              "items": {
                "anyOf": [
                  {
                    "type": "integer"
                  },
                  {
                    "type": "string"
                  }
                ]
              },
              "type": "array",
              "title": "Loc"
            }
          },
          "type": "object",
          "required": [
            "msg"
          ],
          "title": "ErrorDetail",
          "description": "Base schema for error details description."
        },
        "ErrorModel": {
          "properties": {
            "detail": {
              "items": {
                "$ref": "#/components/schemas/ErrorDetail"
              },
              "type": "array",
              "title": "Detail"
            }
          },
          "type": "object",
          "required": [
            "detail"
          ],
          "title": "ErrorModel",
          "description": "Default error response schema.\n\nCan be customized.\nSee :ref:`customizing-error-messages` for more details."
        }
      },
      "securitySchemes": {}
    }
  }
  '''
# ---
# name: test_file_with_metadata_schema
  '''
  {
    "info": {
      "title": "Your Awesome Project",
      "version": "0.1.0"
    },
    "openapi": "3.1.0",
    "paths": {
      "/file-with-metadata/": {
        "get": {
          "operationId": "getFilemetadatacontrollerFileWithMetadata",
          "requestBody": {
            "content": {
              "multipart/form-data": {
                "schema": {
                  "properties": {
                    "attachments": {
                      "items": {
                        "type": "string",
                        "format": "binary"
                      },
                      "type": "array"
                    },
                    "second_file": {
                      "type": "string",
                      "format": "binary"
                    }
                  },
                  "type": "object",
                  "required": [
                    "attachments",
                    "second_file"
                  ],
                  "title": "_SeveralFiles",
                  "description": "Model docs."
                },
                "example": "whatever",
                "encoding": {
                  "second_file": {
                    "contentType": "image/png"
                  },
                  "attachments": {
                    "contentType": "image/jpg"
                  }
                }
              }
            },
            "description": "Model docs.",
            "required": true
          },
          "responses": {
            "200": {
              "description": "OK",
              "content": {
                "application/json": {
                  "schema": {
                    "items": {
                      "type": "integer"
                    },
                    "type": "array"
                  }
                }
              }
            },
            "400": {
              "description": "Raised when request components cannot be parsed",
              "content": {
                "application/json": {
                  "schema": {
                    "$ref": "#/components/schemas/ErrorModel"
                  }
                }
              }
            },
            "422": {
              "description": "Raised when returned response does not match the response schema",
              "content": {
                "application/json": {
                  "schema": {
                    "$ref": "#/components/schemas/ErrorModel"
                  }
                }
              }
            },
            "406": {
              "description": "Raised when provided `Accept` header cannot be satisfied",
              "content": {
                "application/json": {
                  "schema": {
                    "$ref": "#/components/schemas/ErrorModel"
                  }
                }
              }
            }
          },
          "deprecated": false
        }
      }
    },
    "components": {
      "schemas": {
        "ErrorDetail": {
          "properties": {
            "msg": {
              "type": "string",
              "title": "Msg"
            },
            "type": {
              "type": "string",
              "title": "Type"
            },
            "loc": {
              "items": {
                "anyOf": [
                  {
                    "type": "integer"
                  },
                  {
                    "type": "string"
                  }
                ]
              },
              "type": "array",
              "title": "Loc"
            }
          },
          "type": "object",
          "required": [
            "msg"
          ],
          "title": "ErrorDetail",
          "description": "Base schema for error details description."
        },
        "ErrorModel": {
          "properties": {
            "detail": {
              "items": {
                "$ref": "#/components/schemas/ErrorDetail"
              },
              "type": "array",
              "title": "Detail"
            }
          },
          "type": "object",
          "required": [
            "detail"
          ],
          "title": "ErrorModel",
          "description": "Default error response schema.\n\nCan be customized.\nSee :ref:`customizing-error-messages` for more details."
        }
      },
      "securitySchemes": {}
    }
  }
  '''
# ---
